# cuivre

./: Cargo.toml  README.md
src/: assets.rs  input.rs  lib.rs  maths.rs  resources.rs  transform.rs
src/graphics/: batches.rs  camera.rs  manager.rs  mesh.rs  mod.rs  shaders.rs  sprites.rs  text.rs  textures.rs
src/graphics/shaders/: standard.frag
