[package]
name = "cuivre"
version = "0.1.0"
authors = ["Alexandre Janin <alexandrejanin92@gmail.com>"]

repository = "https://github.com/alexandrejanin/cuivre"

description = "A WIP non-intrusive game engine."
categories = ["game-engines"]


[dependencies]
sdl2 = "*"
gl = "*"
cgmath = "*"

image = "*"
ron = "*"
serde = "*"
