[package]
name = "cuivre"
version = "0.1.0"
authors = ["Alexandre Janin <alexandrejanin92@gmail.com>"]
repository = "https://github.com/alexandrejanin/cuivre"

license = "MIT"

description = "A WIP non-intrusive game engine."
categories = ["game-engines"]


[dependencies]
sdl2 = "^0.31.0"
gl = "^0.10.0"
cgmath = "^0.16.1"

image = "^0.19.0"
ron = "^0.4.0"
serde = "^1.0.71"
